--- a/resources/pages/error403.html
+++ b/resources/pages/error403.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>¡Acceso prohibido!</title>
-    <link type="text/css" rel="stylesheet" href="/coffeeshop/resources/css/materialize.min.css"/>
-	<link type="text/css" rel="stylesheet" href="/coffeeshop/resources/css/material-icons.css"/>
+    <link type="text/css" rel="stylesheet" href="/resources/css/materialize.min.css"/>
+	<link type="text/css" rel="stylesheet" href="/resources/css/icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="center-align">
-        <h3>Error 403: Acceso prohibido</h3>
-        <a href="/coffeeshop/views/commerce/"><i class="medium material-icons">restore_page</i></a>
+        <h3>ESTAS ENTRANDO A UNA AREA NO AUTORIZADA</h3>
+        <a href="/LaTiendaMedicalDriver/views/commerce/index.php"><i class="medium material-icons">Regresar al Menu</i></a>        
     </div>
 </body>
 </html>
