--- a/resources/pages/error404.html
+++ b/resources/pages/error404.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="utf-8">
     <title>¡Objeto no localizado!</title>
-    <link type="text/css" rel="stylesheet" href="/coffeeshop/resources/css/materialize.min.css"/>
-	<link type="text/css" rel="stylesheet" href="/coffeeshop/resources/css/material-icons.css"/>
+    <link type="text/css" rel="stylesheet" href="/resources/css/materialize.min.css"/>
+	<link type="text/css" rel="stylesheet" href="/resources/css/icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
     <div class="center-align">
-        <h3>Error 404: Objeto no localizado</h3>
-        <a href="/coffeeshop/views/commerce/"><i class="medium material-icons">restore_page</i></a>
+        <h3>Lo sentimos, no hemos encontrado lo que buscas</h3>
+        <button>
+             <a
+                href="/LaTiendaMedicalDriver/views/commerce/index.php"><i class="medium material-icons">Regresar al menu</i>
+             </a>
+        </button>
     </div>
 </body>
 </html>
