--- a/resources/pages/error403.html
+++ b/resources/pages/error403.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>¡Acceso prohibido!</title>
-    <link type="text/css" rel="stylesheet" href="/resources/css/materialize.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/LaTiendaMedicalDriver/resources/css/materialize.min.css"/>
 	<link type="text/css" rel="stylesheet" href="/resources/css/icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-    <div class="center-align">
-        <h3>ESTAS ENTRANDO A UNA AREA NO AUTORIZADA</h3>
-        <a href="/LaTiendaMedicalDriver/views/commerce/index.php"><i class="medium material-icons">Regresar al Menu</i></a>        
+<body class="light-blue lighten-2">
+    <div class="center-align">     
+        <h2>ERROR DE ACCESO</h1>
+            <h1><a href="/LaTiendaMedicalDriver/views/commerce/index.php"><img src="/LaTiendaMedicalDriver/resources/img/403-forbidden.jpg" height="300" width="500" /></a></h1>
     </div>
 </body>
 </html>
