--- a/resources/pages/error404.html
+++ b/resources/pages/error404.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="utf-8">
     <title>¡Objeto no localizado!</title>
-    <link type="text/css" rel="stylesheet" href="/resources/css/materialize.min.css"/>
+    <link type="text/css" rel="stylesheet" href="/LaTiendaMedicalDriver/resources/css/materialize.min.css"/>
 	<link type="text/css" rel="stylesheet" href="/resources/css/icons.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-    <div class="center-align">
-        <h3>Lo sentimos, no hemos encontrado lo que buscas</h3>
-        <button>
-             <a
-                href="/LaTiendaMedicalDriver/views/commerce/index.php"><i class="medium material-icons">Regresar al menu</i>
-             </a>
-        </button>
-    </div>
-</body>
+<body class="blue darken-4 lighten-2">
+        <div class="center-align">     
+            <h2 class="white-text">PAGINA NO ENCONTRADA</h1>
+                <h1><a href="/LaTiendaMedicalDriver/views/commerce/index.php"><img src="/LaTiendaMedicalDriver/resources/img/404-not-found.png" height="300" width="500" /></a></h1>
+        </div>
+    </body>
 </html>
